core/iccprofile: add support for the MHC2 tag

It's a non-standard tag Windows supports, and some Windows laptop manufacturers
use it in their profiles. While the usage of the calibration matrix seems to
be exclusively bad hacks, supporting it properly is better than the profiles
just not working at all.

BUG: 508791