src/core/iccprofile.h
@@ -26,7 +26,7 @@ class ColorLUT3D;
 class KWIN_EXPORT IccProfile
 {
 public:
-    explicit IccProfile(cmsHPROFILE handle, const Colorimetry &colorimetry, std::optional<ColorPipeline> &&bToA0Tag, std::optional<ColorPipeline> &&bToA1Tag, const std::shared_ptr<ColorTransformation> &inverseEOTF, const std::shared_ptr<ColorTransformation> &vcgt, std::optional<double> relativeBlackPoint, std::optional<double> maxBrightness);
+    explicit IccProfile(cmsHPROFILE handle, const Colorimetry &colorimetry, std::optional<ColorPipeline> &&bToA0Tag, std::optional<ColorPipeline> &&bToA1Tag, const std::shared_ptr<ColorTransformation> &inverseEOTF, const QMatrix4x4 &xyzMatrix, const std::shared_ptr<ColorTransformation> &vcgt, std::optional<double> relativeBlackPoint, std::optional<double> maxFALL, std::optional<double> maxCLL);
     ~IccProfile();
 
     /**
@@ -44,9 +44,18 @@ public:
      * pixels are sent to the display. May be nullptr!
      */
     std::shared_ptr<ColorTransformation> vcgt() const;
+    /**
+     * This comes from the non-standard 'MHC2' tag Microsoft uses.
+     * It needs to be applied in XYZ space before scanout
+     */
+    const QMatrix4x4 &mhc2Matrix() const;
     const Colorimetry &colorimetry() const;
+    /**
+     * relative to maxFALL, not maxCLL
+     */
     std::optional<double> relativeBlackPoint() const;
-    std::optional<double> maxBrightness() const;
+    std::optional<double> maxFALL() const;
+    std::optional<double> maxCLL() const;
 
     static std::expected<std::unique_ptr<IccProfile>, QString> load(const QString &path);
     static const ColorDescription s_connectionSpace;
@@ -57,9 +66,11 @@ private:
     const std::optional<ColorPipeline> m_bToA0Tag;
     const std::optional<ColorPipeline> m_bToA1Tag;
     const std::shared_ptr<ColorTransformation> m_inverseEOTF;
+    const QMatrix4x4 m_xyzMatrix;
     const std::shared_ptr<ColorTransformation> m_vcgt;
     const std::optional<double> m_relativeBlackPoint;
-    const std::optional<double> m_maxBrightness;
+    const std::optional<double> m_maxFALL;
+    const std::optional<double> m_maxCLL;
 };
 
 }
